--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
     "next": "16.0.7",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "rehype-pretty-code": "^0.14.1",
     "remark": "^15.0.1",
-    "remark-html": "^16.0.1"
+    "remark-gfm": "^4.0.1",
+    "remark-html": "^16.0.1",
+    "shiki": "^3.19.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
