--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "rehype-autolink-headings": "^7.1.0",
     "rehype-pretty-code": "^0.14.1",
+    "rehype-slug": "^6.0.0",
     "remark": "^15.0.1",
+    "remark-autolink-headings": "^8.0.0",
     "remark-gfm": "^4.0.1",
     "remark-html": "^16.0.1",
+    "remark-slug": "^8.0.0",
     "shiki": "^3.19.0"
   },
   "devDependencies": {
