--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "predev": "tsx scripts/build-search-index.ts",
+    "prebuild": "tsx scripts/build-search-index.ts",
     "dev": "next dev",
     "build": "next build",
     "start": "next start -H 0.0.0.0 -p 3000",
@@ -11,6 +13,7 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
+    "minisearch": "^7.2.0",
     "next": "16.0.7",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
@@ -39,6 +42,7 @@
     "eslint-config-next": "16.0.7",
     "prettier": "^3.7.4",
     "tailwindcss": "^4",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
